# sandbox-compute-server

./: .gitignore  Dockerfile  README.md  logging_config.py  pyproject.toml  requirements.txt  sandbox_compute_server.py  sandbox_utils.py
.github/workflows/: build-image.yml  release-image.yml
.run/: Sandbox.run.xml
sandbox_compute_server/: __init__.py  app.py  config.py  files.py  manifest.py  mcp.py  mcp_remote.py  mcp_remote_auth.py  run.py  sync.py  tools.py  workspace.py
tests/: test_auth.py  test_env_allowlist_trusted_keys.py  test_mcp_remote_auth.py  test_mcp_result_normalization.py  test_python_exec_env.py  test_sync_proxy_env.py  test_transparent_proxy_routing.py
