[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-compute-server"
version = "0.2.0"
description = "Minimal HTTP supervisor for Gobii sandbox compute pods."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.4",
    "weasyprint>=62.0",
    "gunicorn==23.0.0",
    "fastmcp==2.11.3",
    "mcp==1.13.1",
]

[tool.setuptools]
py-modules = ["sandbox_compute_server", "sandbox_utils", "logging_config"]
